assets/css/style.css
/* ... */
.social-links>* {
  margin: 0 10px;
}

.copyright>* {
  align-items: baseline;
}

/* 404 page */
.warning {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.warning img {
  padding: 20px;
  width: 50%;
  ;
}

.warning a,
.warning i {
  text-decoration: none;
  color: var(--yellow-orange);
}

.warning a:hover,
.warning a:hover i {
  color: var(--red-orange);
}

.warning span {
  color: var(--light-gray);
}

/* media queries */

/* medium screens */
@media (max-width: 900px) {
  :root {
    --card-size: 90px;
  }

  .logo {
    font-size: 1.2rem;
  }

  .memory-field,
  .memory-field .row {
    gap: 20px;
  }

  #small {
    --card-size: 120px;
  }

  #medium {
    --card-size: 100px;
  }

  .modal {
    width: 60%;
    font-size: 1rem;
  }

  article {
    padding: 0 15%;
    font-size: 1.2rem;
  }


  footer .social-links i {
    font-size: 1.2rem;
  }
}

/* medium screens with the height up to 805px */
@media (max-height: 805px) {

  .game-details,
  .choice {
    padding: 10px 0;
  }

  #small,
  #medium,
  #big {
    --card-size: 55px;
  }

  section h1 {
    padding: 10px 0;
  }

  article h2 {
    margin: 5px 0;
  }

  article {
    padding: 0 15%;
    font-size: .9rem;
  }

  #memory-img {
    width: 200px;
  }

  footer {
    position: relative;
  }

}

/* small screens */
@media (max-width: 600px) {
  body {
    margin: 5px;
  }

  #small {
    --card-size: 80px;
  }

  #medium {
    --card-size: 65px;
  }

  #big {
    --card-size: 55px;
  }

  .navbar .logo {
    font-size: 1rem;
  }

  .navbar a {
    font-size: .8rem;
  }

  .game-details {
    padding-top: 30px;
  }

  .timer {
    font-size: 0.8rem;
  }

  .level {
    font-size: .6rem;
  }

  .level i {
    font-size: .8rem;
  }

  .memory-field>div {
    padding: 5px 0;
  }

  .memory-field,
  .memory-field .row {
    gap: 10px;
  }

  .modal {
    width: 80%;
    font-size: 0.8rem;
  }

  .choice {
    font-size: .6rem;
  }

  footer span {
    font-size: .8rem;
  }

  button {
    font-size: .8rem;
    height: 3rem;
    margin: auto 0;
    padding: 0 10px;
  }

  #sound-div {
    margin: auto 0px;
  }

  legend {
    font-size: .8rem;
  }

  fieldset {
    padding: 0 5px 5px 5px;
  }

  fieldset label {
    font-size: .8rem;
    padding-right: 2px;
  }

  section {
    padding: 0 10px;
  }

  section h1 {
    padding: 10px 0;
    font-size: 1.5rem;
  }

  article {
    font-size: .8rem;
    padding: 0 5%;
  }

  .image {
    text-align: center;
  }

  #memory-img {
    width: 200px;
  }

}

/* screens with the height up to 600px */
@media (max-height: 600px) {
  footer {
    position: relative;
  }
}

/* even smaller screens */
@media (max-width: 375px) {

  #small {
    --card-size: 70px;
  }

  #medium {
    --card-size: 55px;
  }

  #big {
    --card-size: 45px;
  }
}

